--- a/index1.html
+++ b/index1.html
@@ -81,6 +81,10 @@
             </div>
         </div>
     </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript"></script>
 </body>
 
 </html>
