--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,21 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
 
-        <!-- Link to local css -->
+    <!-- Link to jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Link to firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
+
+    <!-- Add additional services that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
+
+
+    <!-- Link to youtube iframe -->
+    <script src="https://www.youtube.com/iframe_api"></script>
+
+    <!-- Link to local css -->
     <link href="assests/css/style1.css" type="text/css" rel="stylesheet">
 
 </head>
@@ -63,7 +77,7 @@
                                     <th scope="col">Zipcode</th>
                                 </tr>
                             </thead>
-                            <tbody id="search">
+                            <tbody id="resultsTable">
                                 <!-- Trains will be listed here -->
                             </tbody>
                         </table>
@@ -85,21 +99,6 @@
         </div>
     </div>
 
-    <!-- Link to jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <!-- Link to firebase -->
-    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
-
-    <!-- Add additional services that you want to use -->
-<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
-<!-- <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-messaging.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-functions.js"></script> -->
-
-    <!-- Link to youtube iframe -->
-    <script src="https://www.youtube.com/iframe_api"></script>
 
     <!-- Link to local javascript -->
     <script src="js/app.js"></script>
