--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="card-panel">
+                <div class="header"> <!-- "was card-panel" -->
                     <!-- <img class="img" src="assests/images/food.jpg"> -->
                     <h2>Crave</h2>
                 </div>
