--- a/index1.html
+++ b/index1.html
@@ -78,7 +78,7 @@
                                 </tr>
                             </thead>
                             <tbody id="resultsTable">
-                                <!-- Trains will be listed here -->
+                                <!-- recent searches will be listed here -->
                             </tbody>
                         </table>
                     </div>
