--- a/index1.html
+++ b/index1.html
@@ -100,6 +100,9 @@
     </div>
 
 
+    <!-- Link to youtube iframe -->
+    <script src="https://www.youtube.com/iframe_api"></script>
+
     <!-- Link to local javascript -->
     <script src="js/app.js"></script>
 </body>
