--- a/index.html
+++ b/index.html
@@ -7,23 +7,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Project1-Crave</title>
 
+    <!-- Google Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
+
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-        <!-- Compiled and minified jQuery -->
-   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- Compiled and minified jQuery -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+    <!-- Link to firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
+
+    <!-- Add additional services that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script>
+
+    <!-- Youtube API -->
+    <script src="https://www.youtube.com/iframe_api"></script>
+    <!-- custom CSS -->
     <link href="assests/css/style.css" type="text/css" rel="stylesheet">
 </head>
 
-<body class="red lighten-2">
+<body class="grey lighten-1">
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="card-panel">
-                    <!-- <img class="img" src="assests/images/food.jpg"> -->
-                    <h2>Krave</h2>
+                <div class="header">
+                    <!-- "was card-panel" -->
+                    <img class="img" src="assests/images/foodWithLogo2.jpg">
+                    <!--<h2>Krave</h2>-->
                 </div>
             </div>
         </div>
@@ -37,9 +54,9 @@
                     </div>
 
                     <div class="input-field col s5">
-                        <input id="zipcode" type="text" placeholder="Zipcode">
+                        <input id="zip" type="text" placeholder="Zipcode">
                     </div>
-                    <button class="btn waves-default" id="submit" type="button" name="action">Submit
+                    <button class="waves-effect waves-orange btn-flat" id="submit" type="button" name="action">Submit
                         <i class="material-icons right">send</i>
                     </button>
                 </div>
@@ -47,14 +64,14 @@
         </div><br>
         <div class="row">
             <div class="col-12">
-                <table class="striped">
+                <table class="striped table">
                     <thead>
                         <tr>
                             <th>Recent Searches</th>
                             <th>Zipcode</th>
                         </tr>
                     </thead>
-                    <tbody class="seraches">
+                    <tbody id="resultsTable">
                     </tbody>
                 </table>
             </div>
@@ -71,11 +88,10 @@
             <div id="player"></div>
         </div>
     </div>
-    <!-- Compiled and minified JavaScript -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+
+    <!-- Compiled and minified JavaScript -->
+    <script type="text/javascript" src="assests/js/app.js"></script>
 </body>
 
 </html>
