--- a/index.html
+++ b/index.html
@@ -33,37 +33,34 @@
     <link href="assests/css/style.css" type="text/css" rel="stylesheet">
 </head>
 
-<body class="grey lighten-1">
+<body class="deep-orange lighten-4">
+    <!-- Could use grey lighten-1 -->
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <div class="header">
-                    <!-- "was card-panel" -->
-                    <img class="img" src="assests/images/foodWithLogo2.jpg">
-                    <!--<h2>Krave</h2>-->
-                </div>
+            <div class="col-s12 header">
+                <img class="foodImg" src="assests/images/foodWithLogo2.jpg">
             </div>
         </div>
 
         <div class="row">
             <form class="col s12">
                 <div class="row">
-                    <div class="input-field col s5">
+                    <div class="input-field col s12 m5">
                         <i class="material-icons prefix">keyboard</i>
                         <input id="search" type="text" placeholder="What are you craving for?">
                     </div>
 
-                    <div class="input-field col s5">
-                        <input id="zip" type="text" placeholder="Zipcode">
+                    <div class="input-field col s6 offset-s1 m5">
+                        <input id="zip" type="text" placeholder="Zipcode" maxlength="5">
                     </div>
-                    <button class="waves-effect waves-orange btn-flat" id="submit" type="button" name="action">Submit
+                    <button class="waves-effect waves-grey lighten-4 btn-flat" id="submit" type="button" name="action">Submit
                         <i class="material-icons right">send</i>
                     </button>
                 </div>
             </form>
         </div><br>
         <div class="row">
-            <div class="col-12">
+            <div class="col s12">
                 <table class="striped table">
                     <thead>
                         <tr>
@@ -78,11 +75,11 @@
         </div><br>
 
         <div class="row">
-            <div class="col s4" id="restaurants">
+            <div class="col s12 m6 outPut" id="restaurants">
                 Restaurants
             </div>
 
-            <div class="col s6" id="recipes">
+            <div class="col s12 m6 outPut" id="recipes">
                 How to make?
             </div>
             <div id="player"></div>
