--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Youtube API -->
   <script src="https://www.youtube.com/iframe_api"></script>
   <!-- custom CSS -->
-  <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+  <link href="assests/css/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body class="deep-orange lighten-4">
@@ -38,7 +38,7 @@
   <div class="container">
     <div class="row">
       <div class="col-s12 header">
-        <img class="foodImg" src="assets/images/foodWithLogo2.jpg">
+        <img class="foodImg" src="assests/images/foodWithLogo2.jpg">
       </div>
     </div>
 
@@ -88,7 +88,7 @@
 
 
   <!-- Compiled and minified JavaScript -->
-  <script type="text/javascript" src="assets/js/app.js"></script>
+  <script type="text/javascript" src="assests/js/app.js"></script>
 </body>
 
 </html>
